[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/actors/objects/boo/boo.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/objects/boo/boo.png" type="Texture" id=2]
[ext_resource path="res://scenes/actors/objects/bullet_bill/sound.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/actors/mario/particles/shine_sparkles.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/bump.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 256, 128 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 448, 224 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 16, 16, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 80, 16, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 144, 16, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 208, 16, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 272, 16, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=11]
tracks/0/type = "method"
tracks/0/path = NodePath("DeleteTimer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Die")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CanvasItemMaterial" id=12]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 1
emission_sphere_radius = 8.86
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 14 )
anim_speed = 6.0
anim_speed_random = 0.59
anim_offset_random = 0.27

[sub_resource type="CircleShape2D" id=16]
radius = 17.0

[node name="Boo" type="Node2D"]
z_index = 12
script = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="StompArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompArea"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="PlayerDetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
shape = SubResource( 3 )

[node name="PlayerUndetectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerUndetectArea"]
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 11 )

[node name="Knockback" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -18.0

[node name="Die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 12 )
emitting = false
amount = 16
lifetime = 3.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 15 )
texture = ExtResource( 4 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
rect = Rect2( -16, -16, 32, 32 )
pause_particles = false
pause_animated_sprites = false
physics_process_parent = true

[node name="EditorArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EditorArea"]
shape = SubResource( 16 )
